Src/Bcgen/PaxoParser.js
// jshint ignore: start
import antlr4 from 'antlr4';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class PaxoParser extends antlr4.Parser {

    static grammarFileName = "Paxo.g4";
    static literalNames = [ null, "';'", "'<'", "'.'", "'>'", "'='", "'['", 
                            "']'", "'++'", "'--'", "'('", "')'", "'?'", 
                            "':'", "'->'", "'_'", "'|:'", "'\\uD834\uDD06'", 
                            "':|'", "'\\uD834\uDD07'", "'{'", "','", "'}'", 
                            "'\\uD83C\uDFC1'", "'end'", "'\\u00F7'", "'\\u00D7'", 
                            "'+'", "'-'", "'\\u2022\\u00AB'", "'\\u00BB\\u2022'", 
                            "'\\u2264'", "'<='", "'\\u2265'", "'>='", "'=='", 
                            "'!='", "'\\u2260'", "'&'", "'|'", "'.&'", "'.|'", 
                            "'!'", "'.!'", "'\\u00AB'", "'\\u00BB'", null, 
                            "'n'", "'ni'", "'abc'", "'trit'", "'bool'", 
                            "'pin'", "'fx'", null, "'col'", null, "'local'", 
                            null, null, null, null, "'return'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, "VAR_TYPE", 
                             "NUM_TYPE", "COMPLEX_TYPE", "CHARA_TYPE", "TRIT_TYPE", 
                             "BOOLEAN_TYPE", "POINTER_TYPE", "FUNC_TYPE", 
                             "PKG_TYPE", "COLOR_TYPE", "GLOBAL", "LOCAL", 
                             "TRY", "CATCH", "ARROW", "INCLUDE", "RETURN", 
                             "THROW", "PAUSE_MODE", "PLAY_MODE", "INT_LITERAL", 
                             "DECIMAL_LITERAL", "COMPLEX_LITERAL", "BOOLEAN_BIT", 
                             "BOOLEAN_TRIT", "POINTER_LITERAL", "COLOR_LITERAL", 
                             "THIS_SCOPE", "IDENTIFIER", "STRING_LITERAL", 
                             "CHAR_LITERAL", "LINE_COMMENT", "BLOCK_COMMENT", 
                             "WS" ];
    static ruleNames = [ "program", "statement", "varDeclaration", "type", 
                         "scope", "assignment", "condStatement", "matchCase", 
                         "loopStatement", "loopMode", "loopDelimiter", "loopEndDelimiter", 
                         "tryCatchStatement", "functionDeclaration", "pkgDeclaration", 
                         "block", "parameterList", "returnStatement", "throwStatement", 
                         "argumentList", "expression", "arrayLiteral" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = PaxoParser.ruleNames;
        this.literalNames = PaxoParser.literalNames;
        this.symbolicNames = PaxoParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 20:
    	    		return this.expression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 20);
    		case 1:
    			return this.precpred(this._ctx, 19);
    		case 2:
    			return this.precpred(this._ctx, 18);
    		case 3:
    			return this.precpred(this._ctx, 17);
    		case 4:
    			return this.precpred(this._ctx, 16);
    		case 5:
    			return this.precpred(this._ctx, 24);
    		case 6:
    			return this.precpred(this._ctx, 23);
    		case 7:
    			return this.precpred(this._ctx, 22);
    		case 8:
    			return this.precpred(this._ctx, 21);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, PaxoParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 47;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1049666) !== 0) || ((((_la - 42)) & ~0x1f) === 0 && ((1 << (_la - 42)) & 4281991159) !== 0) || ((((_la - 74)) & ~0x1f) === 0 && ((1 << (_la - 74)) & 7) !== 0)) {
	            this.state = 44;
	            this.statement();
	            this.state = 49;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 50;
	        this.match(PaxoParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, PaxoParser.RULE_statement);
	    var _la = 0;
	    try {
	        this.state = 72;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 52;
	            this.match(PaxoParser.T__0);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 53;
	            this.varDeclaration();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 54;
	            this.assignment();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 55;
	            this.condStatement();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 56;
	            this.loopStatement();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 57;
	            this.tryCatchStatement();
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 58;
	            this.throwStatement();
	            break;

	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 59;
	            this.returnStatement();
	            break;

	        case 9:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 60;
	            this.expression(0);
	            this.state = 62;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	            if(la_===1) {
	                this.state = 61;
	                this.match(PaxoParser.T__0);

	            }
	            break;

	        case 10:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 64;
	            this.match(PaxoParser.INCLUDE);
	            this.state = 65;
	            this.match(PaxoParser.T__1);
	            this.state = 66;
	            this.match(PaxoParser.IDENTIFIER);
	            this.state = 69;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===3) {
	                this.state = 67;
	                this.match(PaxoParser.T__2);
	                this.state = 68;
	                this.match(PaxoParser.IDENTIFIER);
	            }

	            this.state = 71;
	            this.match(PaxoParser.T__3);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	varDeclaration() {
	    let localctx = new VarDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, PaxoParser.RULE_varDeclaration);
	    var _la = 0;
	    try {
	        this.state = 101;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 75;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===56 || _la===57) {
	                this.state = 74;
	                this.scope();
	            }

	            this.state = 77;
	            this.type();
	            this.state = 78;
	            this.match(PaxoParser.IDENTIFIER);
	            this.state = 79;
	            this.match(PaxoParser.T__4);
	            this.state = 80;
	            this.expression(0);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 83;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===56 || _la===57) {
	                this.state = 82;
	                this.scope();
	            }

	            this.state = 85;
	            this.type();
	            this.state = 86;
	            this.match(PaxoParser.IDENTIFIER);
	            this.state = 87;
	            this.match(PaxoParser.T__5);
	            this.state = 89;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===66) {
	                this.state = 88;
	                this.match(PaxoParser.INT_LITERAL);
	            }

	            this.state = 91;
	            this.match(PaxoParser.T__6);
	            this.state = 92;
	            this.match(PaxoParser.T__4);
	            this.state = 93;
	            this.arrayLiteral();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 96;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===56 || _la===57) {
	                this.state = 95;
	                this.scope();
	            }

	            this.state = 98;
	            this.type();
	            this.state = 99;
	            this.match(PaxoParser.IDENTIFIER);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	type() {
	    let localctx = new TypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, PaxoParser.RULE_type);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 103;
	        _la = this._input.LA(1);
	        if(!(((((_la - 46)) & ~0x1f) === 0 && ((1 << (_la - 46)) & 1023) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	scope() {
	    let localctx = new ScopeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, PaxoParser.RULE_scope);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        _la = this._input.LA(1);
	        if(!(_la===56 || _la===57)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignment() {
	    let localctx = new AssignmentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, PaxoParser.RULE_assignment);
	    try {
	        this.state = 148;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 107;
	            this.match(PaxoParser.IDENTIFIER);
	            this.state = 108;
	            this.match(PaxoParser.T__4);
	            this.state = 109;
	            this.expression(0);
	            this.state = 111;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	            if(la_===1) {
	                this.state = 110;
	                this.match(PaxoParser.T__0);

	            }
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 113;
	            this.match(PaxoParser.IDENTIFIER);
	            this.state = 114;
	            this.match(PaxoParser.T__5);
	            this.state = 115;
	            this.expression(0);
	            this.state = 116;
	            this.match(PaxoParser.T__6);
	            this.state = 117;
	            this.match(PaxoParser.T__4);
	            this.state = 118;
	            this.expression(0);
	            this.state = 120;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
	            if(la_===1) {
	                this.state = 119;
	                this.match(PaxoParser.T__0);

	            }
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 122;
	            this.match(PaxoParser.IDENTIFIER);
	            this.state = 123;
	            this.match(PaxoParser.T__7);
	            this.state = 125;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	            if(la_===1) {
	                this.state = 124;
	                this.match(PaxoParser.T__0);

	            }
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 127;
	            this.match(PaxoParser.IDENTIFIER);
	            this.state = 128;
	            this.match(PaxoParser.T__8);
	            this.state = 130;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
	            if(la_===1) {
	                this.state = 129;
	                this.match(PaxoParser.T__0);

	            }
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 132;
	            this.expression(0);
	            this.state = 133;
	            this.match(PaxoParser.T__2);
	            this.state = 134;
	            this.match(PaxoParser.IDENTIFIER);
	            this.state = 135;
	            this.match(PaxoParser.T__4);
	            this.state = 136;
	            this.expression(0);
	            this.state = 138;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	            if(la_===1) {
	                this.state = 137;
	                this.match(PaxoParser.T__0);

	            }
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 140;
	            this.match(PaxoParser.THIS_SCOPE);
	            this.state = 141;
	            this.match(PaxoParser.T__2);
	            this.state = 142;
	            this.match(PaxoParser.IDENTIFIER);
	            this.state = 143;
	            this.match(PaxoParser.T__4);
	            this.state = 144;
	            this.expression(0);
	            this.state = 146;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	            if(la_===1) {
	                this.state = 145;
	                this.match(PaxoParser.T__0);

	            }
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condStatement() {
	    let localctx = new CondStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, PaxoParser.RULE_condStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 150;
	        this.match(PaxoParser.T__9);
	        this.state = 151;
	        this.expression(0);
	        this.state = 152;
	        this.match(PaxoParser.T__10);
	        this.state = 153;
	        this.match(PaxoParser.T__11);
	        this.state = 154;
	        this.matchCase();
	        this.state = 159;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,16,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 155;
	                this.match(PaxoParser.T__12);
	                this.state = 156;
	                this.matchCase(); 
	            }
	            this.state = 161;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,16,this._ctx);
	        }

	        this.state = 163;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
	        if(la_===1) {
	            this.state = 162;
	            this.match(PaxoParser.T__0);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	matchCase() {
	    let localctx = new MatchCaseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, PaxoParser.RULE_matchCase);
	    try {
	        this.state = 172;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 6:
	        case 10:
	        case 20:
	        case 42:
	        case 43:
	        case 44:
	        case 66:
	        case 67:
	        case 68:
	        case 69:
	        case 70:
	        case 71:
	        case 72:
	        case 73:
	        case 74:
	        case 75:
	        case 76:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 165;
	            this.expression(0);
	            this.state = 166;
	            this.match(PaxoParser.T__13);
	            this.state = 167;
	            this.block();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 169;
	            this.match(PaxoParser.T__14);
	            this.state = 170;
	            this.match(PaxoParser.T__13);
	            this.state = 171;
	            this.block();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	loopStatement() {
	    let localctx = new LoopStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, PaxoParser.RULE_loopStatement);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 174;
	        this.match(PaxoParser.T__9);
	        this.state = 175;
	        this.expression(0);
	        this.state = 176;
	        this.match(PaxoParser.T__10);
	        this.state = 177;
	        this.match(PaxoParser.T__12);
	        this.state = 178;
	        this.loopMode();
	        this.state = 180;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===16 || _la===17) {
	            this.state = 179;
	            this.loopDelimiter();
	        }

	        this.state = 182;
	        this.block();
	        this.state = 184;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===18 || _la===19) {
	            this.state = 183;
	            this.loopEndDelimiter();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	loopMode() {
	    let localctx = new LoopModeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, PaxoParser.RULE_loopMode);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 186;
	        _la = this._input.LA(1);
	        if(!(_la===64 || _la===65)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	loopDelimiter() {
	    let localctx = new LoopDelimiterContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, PaxoParser.RULE_loopDelimiter);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 188;
	        _la = this._input.LA(1);
	        if(!(_la===16 || _la===17)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	loopEndDelimiter() {
	    let localctx = new LoopEndDelimiterContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, PaxoParser.RULE_loopEndDelimiter);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 190;
	        _la = this._input.LA(1);
	        if(!(_la===18 || _la===19)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tryCatchStatement() {
	    let localctx = new TryCatchStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, PaxoParser.RULE_tryCatchStatement);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 192;
	        this.match(PaxoParser.TRY);
	        this.state = 193;
	        this.block();
	        this.state = 194;
	        this.match(PaxoParser.CATCH);
	        this.state = 195;
	        this.match(PaxoParser.T__9);
	        this.state = 196;
	        this.match(PaxoParser.IDENTIFIER);
	        this.state = 199;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3) {
	            this.state = 197;
	            this.match(PaxoParser.T__2);
	            this.state = 198;
	            this.match(PaxoParser.IDENTIFIER);
	        }

	        this.state = 201;
	        this.match(PaxoParser.T__10);
	        this.state = 202;
	        this.block();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionDeclaration() {
	    let localctx = new FunctionDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, PaxoParser.RULE_functionDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 204;
	        this.match(PaxoParser.T__9);
	        this.state = 206;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 46)) & ~0x1f) === 0 && ((1 << (_la - 46)) & 1023) !== 0)) {
	            this.state = 205;
	            this.parameterList();
	        }

	        this.state = 208;
	        this.match(PaxoParser.T__10);
	        this.state = 211;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,23,this._ctx);
	        if(la_===1) {
	            this.state = 209;
	            this.match(PaxoParser.T__12);
	            this.state = 210;
	            this.type();

	        }
	        this.state = 213;
	        this.block();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	pkgDeclaration() {
	    let localctx = new PkgDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, PaxoParser.RULE_pkgDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 215;
	        this.match(PaxoParser.T__19);
	        this.state = 222;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,25,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 217;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                if(_la===21) {
	                    this.state = 216;
	                    this.match(PaxoParser.T__20);
	                }

	                this.state = 219;
	                this.varDeclaration(); 
	            }
	            this.state = 224;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,25,this._ctx);
	        }

	        this.state = 226;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===21) {
	            this.state = 225;
	            this.match(PaxoParser.T__20);
	        }

	        this.state = 228;
	        this.match(PaxoParser.T__21);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	block() {
	    let localctx = new BlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, PaxoParser.RULE_block);
	    var _la = 0;
	    try {
	        this.state = 261;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,31,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 230;
	            this.match(PaxoParser.T__19);
	            this.state = 234;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1049666) !== 0) || ((((_la - 42)) & ~0x1f) === 0 && ((1 << (_la - 42)) & 4281991159) !== 0) || ((((_la - 74)) & ~0x1f) === 0 && ((1 << (_la - 74)) & 7) !== 0)) {
	                this.state = 231;
	                this.statement();
	                this.state = 236;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 237;
	            this.match(PaxoParser.T__21);
	            break;
